fix: When the stars align

--- a/game/static/game/css/scoreboard.css
+++ b/game/static/game/css/scoreboard.css
@@ -40,6 +40,7 @@ table td.fixed-width {
 .scoreboard--completed {
   color: #eab502;
   font-size: 24px;
+  vertical-align: middle;
 }
 
 #scoreboardTable_wrapper td.scoreboard--completed-secondary {
